# autoLightsOff

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  button.html  idf_component.yml  main.c
main/certs/: gen_crt.sh  server.key  server.pem
shell/: shellAutoLightOff2.stl
